<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextCours"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/nom_devoir" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/description_devoir" />

    <Spinner
        android:id="@+id/spinnerIndicePriorite"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:entries="@array/priorite_array" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageDevoir"
        android:layout_width="170dp"
        android:layout_height="159dp"
        android:layout_gravity="center"
        android:src="@drawable/baseline_image_24"
        app:shapeAppearanceOverlay="@style/ImageCirculaire"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btnAjouterImage"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:padding="8dp"
        android:theme="@style/CustomButtonModeSombre"
        android:text="@string/ajouter_image"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/btnAnnuler"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginEnd="4dp"
            android:padding="8dp"
            android:text="@string/annuler"
            android:theme="@style/CustomButtonModeSombre"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnAjouterDevoir"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/ajouter"
            android:textSize="14sp"
            android:padding="8dp"
            android:theme="@style/CustomButtonModeSombre"
            android:layout_marginStart="4dp" />

    </LinearLayout>

</LinearLayout>
