<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/inscription"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/messageInscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:text="@string/inscription"
        android:textColor="@color/blanc"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnInscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="148dp"
        android:background="@drawable/bouton_rond"
        android:theme="@style/Button.Turquoise"
        android:text="@string/inscris_moi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/saisiNomInscription"
        android:layout_width="242dp"
        android:layout_height="44dp"
        android:layout_marginTop="320dp"
        android:background="@drawable/champ_saisi"
        android:ems="10"
        android:hint="@string/indice_nom_utilisateur"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/saisiMdpInscription"
        android:layout_width="242dp"
        android:layout_height="42dp"
        android:layout_marginBottom="308dp"
        android:background="@drawable/champ_saisi"
        android:ems="10"
        android:hint="@string/indice_mot_de_passe"
        android:inputType="textPassword"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/confirmationMdpInscription"
        android:layout_width="242dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/champ_saisi"
        android:ems="10"
        android:hint="@string/indice_confirmer_mot_de_passe"
        android:inputType="textPassword"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saisiMdpInscription"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/versConnexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="224dp"
        android:text="@string/vers_connexion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>