<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activite.Connexion">

    <Button
        android:id="@+id/btnConnexion"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginTop="48dp"
        android:text="@string/connecter"
        android:background="@drawable/bouton_rond"
        android:theme="@style/Button.Turquoise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saisiMdp" />

    <EditText
        android:id="@+id/saisiNomUtilisateur"
        android:layout_width="242dp"
        android:layout_height="44dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/champ_saisi"
        android:ems="10"
        android:hint="@string/indice_nom_utilisateur"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/saisiMdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.985" />

    <EditText
        android:id="@+id/saisiMdp"
        android:layout_width="242dp"
        android:layout_height="42dp"
        android:layout_marginBottom="284dp"
        android:background="@drawable/champ_saisi"
        android:ems="10"
        android:hint="@string/indice_mot_de_passe"
        android:inputType="textPassword"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/messageAccueil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="228dp"
        android:text="@string/bienvenue"
        android:textColor="@color/blanc"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/versIncription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/vers_inscription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saisiMdp" />


</androidx.constraintlayout.widget.ConstraintLayout>
