<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/turquoise">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/navbar"
        android:name="ca.qc.bdeb.c5gm.tp1.fragment.NavigationFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_navigation" />

    <EditText
        android:id="@+id/nomUtilisateurModif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:hint="@string/indice_nom_utilisateur"
        android:textColorHint="?attr/iconTint"
        android:textColor="?attr/iconTint"
        android:inputType="text"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/mdpModif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:hint="@string/indice_mot_de_passe"
        android:textColorHint="?attr/iconTint"
        android:textColor="?attr/iconTint"
        android:inputType="textPassword"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomUtilisateurModif" />

    <EditText
        android:id="@+id/mdpModifConfirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="100dp"
        android:textColorHint="?attr/iconTint"
        android:textColor="?attr/iconTint"
        android:ems="10"
        android:hint="@string/indice_confirmer_mot_de_passe"
        android:inputType="textPassword"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mdpModif" />

    <Button
        android:id="@+id/btnModifierCompte"
        android:layout_width="212dp"
        android:layout_height="37dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/bouton_rond"
        android:text="@string/modifier"
        android:theme="@style/Button.Turquoise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mdpModifConfirmation" />

    <Button
        android:id="@+id/btnSupprimerCompte"
        android:layout_width="206dp"
        android:layout_height="38dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="104dp"
        android:background="@drawable/bouton_rond"
        android:text="@string/supprimer"
        android:theme="@style/Button.Rouge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnModifierCompte" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:text="@string/vos_preferences"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/modeSombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="260dp"
        android:layout_marginTop="72dp"
        android:text="@string/mode_sombre"
        android:textColor="?attr/iconTint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView9"
        android:name="ca.qc.bdeb.c5gm.tp1.fragment.ToolbarFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>