<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.TriviaFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/question"
            android:layout_width="279dp"
            android:layout_height="89dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:justificationMode="inter_word"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text=""
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/saisiReponse"
            app:layout_constraintEnd_toStartOf="@+id/btnProchaineQuestion"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/saisiReponse"
            android:layout_width="356dp"
            android:layout_height="49dp"
            android:layout_marginTop="184dp"
            android:ems="10"
            android:hint="@string/reponse"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btnProchaineQuestion"
            android:layout_width="60dp"
            android:layout_height="41dp"
            android:layout_marginTop="68dp"
            android:layout_marginEnd="28dp"
            android:src="@drawable/baseline_arrow_forward_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/iconTint"/>

        <Button
            android:id="@+id/btnConfirmeReponse"
            android:layout_width="342dp"
            android:layout_height="44dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/bouton_rond"
            android:text="@string/confirmer"
            android:theme="@style/Button.Turquoise"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/saisiReponse" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/trivia"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>